--- a/country extractor.ipynb
+++ b/country extractor.ipynb
@@ -26,11 +26,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "import spacy\n",
     "from spacy_langdetect import LanguageDetector\n",
     "\n",
     "nlp = spacy.load(\"en_core_web_sm\")\n",
-    "nlp.add_pipe(LanguageDetector(), name='language_detector', last=True)"
+    "nlp.add_pipe(LanguageDetector(), name='language_detector', last=True)\n",
+    "\"\"\""
    ]
   },
   {
@@ -39,11 +41,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
     "f = open(\"poetry of belonging2.txt\", \"r\")\n",
     "temp_book = f.readlines()\n",
     "temp_book_str = ''\n",
     "for i in range(0,len(temp_book)):\n",
-    "    temp_book_str += str(temp_book[i])"
+    "    temp_book_str += str(temp_book[i])\n",
+    "\"\"\""
    ]
   },
   {
@@ -52,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "temp_book_str =  temp_book_str.replace('\\n',' ')"
+    "#temp_book_str =  temp_book_str.replace('\\n',' ')"
    ]
   },
   {
